--- a/bin/HTML/ExtendedJS/main.css
+++ b/bin/HTML/ExtendedJS/main.css
@@ -4,16 +4,15 @@ body {
 	text-align: left;
 	margin: 0px auto;
 	padding-top: 0px;
+	padding-bottom: 30px;
 	background-color: #202020;
          font-size: 0.83em;
 	color: #dddddd;
-    	/*width: 240px;*/
-    	max-width: 500px;
-    	min-width: 240px;
-	padding-bottom: 10px;
-	margin-bottom: 10px;
-	border-bottom: 1px solid #404040;
+    width: 360px;
+	
+	min-height: 423px;
 }
+
 
 
 .hidden {
@@ -32,13 +31,12 @@ h2 {
 }
 
 p {
-margin:0;
-padding:0;
+	margin:0;
+	padding:0;
 }
 
 
-.FileNotFound,
-.FileNotFound a{
+.FileNotFound .title{
 	text-decoration: line-through ! important;
 }
 
@@ -46,41 +44,42 @@ p.warning {
 	color: red;
 }
 
-
 div.menu {
-	margin 5px;
-	padding: 10px;
+	text-align: center;
+	padding: 10px 0px;
 	border-bottom: 1px solid #404040;
 	margin-bottom:10px;
 }
 
+img.menuicon {
+	margin-right: 5px;
+	vertical-align: middle;
+}
+a img {border: 0px;}
+
 ul.mainmenu {
 	margin: 0;
-	padding: 10px 0px;
+	padding: 0px 0px;
 	text-align: center;
-	color: #202020;
-	width: 236;	
+	height: 40px;
 }
 
 ul.mainmenu li {
 	list-style: none;
-	display: inline;
-	color: #202020;
-	background-color: #dddddd;
-	border: 1px solid white;
-	padding: 8px 2px;
-	margin: 2px;
+	float: left;
+	border: 1px solid #202020;
+	padding: 5px 9px;	
+	height: 32px;
 }
-ul.mainmenu li.active {	
-	background-color: #fafafa;
+ul.mainmenu li.active{		
+	border-color: #fafafa;
+}
+ul.mainmenu li a{
+	display: inline-block;
 }
 
-ul.mainmenu a{
-	color: #202020;
-	padding: 8px 20px;
-}
-ul.mainmenu li:hover{
-	background-color: #fafafa;
+ul.mainmenu a:hover{
+	color: red;
 }
 
 div.warning {
@@ -95,6 +94,90 @@ div.error {
 	margin-top: 5px;
 	padding: 10px;
 }
+
+/*
+  Playlist 
+*/
+div.playlistitem,
+div.libraryitem {	
+	width: 350px;
+	padding: 3px;	
+	clear:both;
+	min-height: 50px;
+}
+.playlistitem a:hover,
+div.libraryitem a:hover {
+	color: red ! important;
+}
+div.playlistitem .controls,
+div.playlistitem .index,
+div.playlistitem .title,
+div.playlistitem .cover {	
+	float: left;	
+	display: inline-block;
+	vertical-align: top;
+}
+div.playlistitem .controls{
+	width: 96px;
+}
+div.playlistitem .index{
+	width: 25px;
+	padding-right:5px;
+	text-align:right;	
+}
+div.playlistitem .title{
+	width: 170px;
+	padding-left: 3px;
+}
+div.playlistitem .cover{
+	width: 50px;
+	overflow: hidden;	
+}
+div.current ,
+div.current .title{
+	background-color: #707070;
+	color: #dddddd;
+}
+span.votes{
+	color: #999999; 
+	font-size: 0.85em;
+}
+span.duration {
+	color: #999999; 
+}
+span.prebook{
+	font-size:0.85em;
+	color: #666666;
+}
+span.noprebook {
+	font-size:0.9em;
+	display: none;
+}
+
+
+/*
+  Library-List (Searchresults)
+*/
+div.libraryitem .controls,
+div.libraryitem .title,
+div.libraryitem .cover {	
+	float:left;
+	vertical-align: top;
+}
+div.libraryitem .controls{
+	width: 74px;
+}
+div.libraryitem .title{
+	width: 220px;
+	padding-left: 3px;
+}
+div.libraryitem .cover{
+	width: 50px;
+	overflow: hidden;	
+}
+
+
+
 
 div.currenttitle {	
 	margin-bottom: 10px;
@@ -119,27 +202,26 @@ div.volumecontainer{
 #playercontrol{
 		float: left;
 		height: 40px;
-		width:200px;
+		width: 200px;
+		margin-left: 30px;
 }
 
 .playercontrol {
-	padding-bottom: 10px;
-	margin: 10px auto;
+	padding-bottom: 10px;	
 	text-align: center;
 	border-bottom: 1px solid #404040;
 	height: 70px;
-	width: 300px;
-	
+	width: 360px;
+	position: relative;	
 }
 a.button{
-	//color: #202020;	
-	//background-color: #fafafa;
 	border: 1px solid #202020;	
 	padding: 2px 5px;
 	text-align: center;
 	background-repeat: no-repeat;
 	background-position: center;	
 	display:inline-block;
+	cursor: pointer;
 }
 
 a.button img{
@@ -156,12 +238,6 @@ a.button img{
 }
 
 
-.playlist table,
-.library table {
-	width:100%;
-}
-
-
 .playlist .button,
 .library .button{
 	border: 0px;
@@ -172,98 +248,10 @@ a.button img{
 	overflow: hidden;
 }
 
-.playlist table tr td,
-.library table tr td{
-	padding-top:3px;
-	padding-bottom: 3px;
-}
-.library table tr td.controls{
-	width:50px;
-}
-
-.playlist table tr td,
-.library table tr td{
-	vertical-align:top;
-}
-
-.playlist table tr td.controls{
-	min-width: 96px;
-	width: 96px;
-	text-align:right;
-	padding-left: 3px;
-}
-
-.playlist td.title{
-	width: 200px;
-}
-.library td.title{
-	width: 220px;
-}
-
-.library div.title{
-	max-width: 220px;
-}
-
-.search .controls{
-	width: 52px;
-	text-align:right;
-	padding-left: 3px;
-}
-.playlist .index {
-	text-align:right;
-	width: 20px;
-	padding-right:5px;
-}
-
-span.prebook{
-	font-size:0.9em;
-	color: #666666;
-}
-span.noprebook {
-		font-size:0.9em;
-		display: none;
-}
-
-.search .title{
-	padding-left:3px;
-}
-.playlist .title a,
-.search .title a{
-	display:block;
-}
-
-.playlist .duration,
-.search .index,
-.search .duration,
-.player .duration{
-	color: #999999;
-}
-
-.playlist .cover,
-.library .cover  {
-	width: 50px;
-	padding-right:3px;
-}
-
-.playlist tr:hover,
-.library tr:hover{
-	background-color: #707070;
-}
-
-div.playlist .current{
-	background-color: #707070;
-	color: #dddddd;
-}
-
-
-
-
-
-
 .details .left {
 	width: 50%;
 	float: left;
-	padding-left:5px;
+	padding-left:5px;	
 }
 
 .details .artist, 
@@ -280,26 +268,16 @@ div.playlist .current{
 .details .data {
 	color: #999999;
 	margin-top: 5px;
+	margin-bottom: 10px;
 }
 
 .details .controls {
 	clear: both;
-	text-align: center;
+	padding-left: 30px;
+	padding-top: 10px;
+	border-top: 1px solid #404040;
 }
 
-
-
-table.filenotfound{
-	text-decoration: line-through;
-}
-
-
-div.playlistcontrol{
-	font-size: 0.7em;
-	text-align: right;
-	width: 100%;
-         clear: both;
-	}
 	
 form {
 	margin-bottom: 5px;
@@ -311,7 +289,6 @@ input.text {
 	padding: 0px;
 }
 input.button {
-	//height: 20px;
 	padding: 0;
 }
 
@@ -342,31 +319,36 @@ ul.charselection li.active {
 	border: 1px solid red;
 }
 
-.browseartist {
-	padding:5px;
-}
-.browsealbum .title,
-.browseartist .title {
-	max-width: 250px;
+div.browsealbum{
+	height: 68px;
+	overflow: hidden;
+	padding: 2px;
+	margin-bottom: 2px;
+	margin-right: 2px;
+	background-color:#303030;
+	border: 1px solid #404040;
+	float:left;
 }
 
-div.browsealbum{
-height: 60px;
-overflow: hidden;
-padding: 5px;
-margin-bottom:5px;
-margin-right:5px;
-background-color:#303030;
-border: 1px solid #404040;
-float:left;
+.browsealbum .title{	
+	width: 70px; 
+	float: left;
+	padding-left: 2px;
 }
+
+.browsealbum .count {
+	color: #999999; 
+	font-size: 0.85em;
+}
+
+.browsealbum .cover{
+	width:40px; 
+	float: left;
+}
+
 
 span.tagcloud {	
 	margin: 2px;
-}
-
-span.tagcloud a{	
-	//
 }
 
 span.tagcloud a:hover {	
@@ -380,7 +362,7 @@ div.pagination{
 	padding-top:5px;
 }
 a.pagination {
-padding-left:5px;
-padding-right:5px;
+	padding-left:5px;
+	padding-right:5px;
 
 }
